module-04/03-network-policies/frontend-policy-all-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-all-deny
  namespace: test
spec:
  podSelector: {} # All pods within frontend namespace
  egress: # outgoing traffic
  ingress: # incoming traffic
  policyTypes:
  - Egress
  - Ingress
